<resources>
    <string name="app_name">My Application</string>
    <string name="button">Descriere</string>
    <string name="button2">Meniu</string>
    <string name="button3">Oferte</string>
    <string name="button4">Galerie</string>
    <string name="button5">Rezervari</string>
    <string name="editText3">SteakMania</string>
    <string name="textView">Restaurantul  SteakMania este situat in Bucuresti; recent construit ofera un spatiu primitor si incapator, de o capacitate de 50 de locuri ce permit organizarea de mese festive, petreceri, intalniri de afaceri, dar in special petrecerea timpului cu familia sau cu prietenii intr-o atmosfera calduroasa. Pentru a capata savoare si intensitate, fiecare preparat are la baza trei aspecte : ingredientele atent selectionate, indemanarea bucatarului si o prezentare originala.Restaurantul nostru ramane, in esenta, o promisiune familiala, dar si un prilej de incantare a simturilor culinare. Va asteptam pentru a savura preparatele noastre, iar surprizele nu vor intarzia sa apara.</string>
    <string name="textView5">Contacteaza-ne !           Adresa :  Aleea Rotunda 10, sector 4 , Bucuresti       Telefon : 0760281042    Email:contact@steakmania.ro</string>
    <string name="textView2">Program : Luni : 14:00-23:00  Marti – Joi : 12:00 – 23:00  Vineri-Duminica : 12:00-23:00</string>
    <string name="textView7">Big Steak</string>
    <string name="textView8">Burgers</string>
    <string name="textView9">Porc Ribs</string>
    <string name="textView10">Delmonico Steak</string>
    <string name="textView11">Rack Berbecut</string>
    <string name="textView14">Supa mediteraneana cu fructe de mare</string>
    <string name="textView13">Cheesecake cu fructe de padure</string>
    <string name="textView20">MENIU</string>
    <string name="textView21">SUPE/CREME</string>
    <string name="checkBox8">Supa mediteraneana cu fructe de mare  400g           18 lei</string>
    <string name="checkBox9">Ciorba de vitel de lapte        400g                              9 lei</string>
    <string name="checkBox10">Supa/crema zilei     400g                9 lei</string>
    <string name="textView28">(intreaba ospatarul)</string>
    <string name="textView22">SALATE APERITIV</string>
    <string name="checkBox11">Salata Caesar  350g     19lei</string>
    <string name="textView29">(pui asiatic,dressing iaurt,mix de salate)</string>
    <string name="checkBox12">Salata Gama   350g      23 lei</string>
    <string name="steakmania">STEAKMANIA</string>
    <string name="rezervari">Rezervari</string>
    <string name="galerie">Galerie</string>
    <string name="descriere">Descriere</string>
    <string name="meniu">Meniu</string>
    <string name="oferte">Oferte</string>
    <string name="aripioare_in_crusta_pan_cu_duet_de_sosuri_chillie_dixie">(aripioare in crusta pan cu duet de sosuri chillie/dixie)</string>
    <string name="cotlete_de_berbecut_la_gratar_cu_oregano">(cotlete de berbecut la gratar cu oregano)</string>
    <string name="frigarui_de_muschiulet_limoni_la_gratar">(frigarui de muschiulet limoni la gratar)</string>
    <string name="intreaba_ospatarul">(intreaba ospatarul)</string>
    <string name="muschi_de_vita_ou_mix_de_salate_legume">(muschi de vita,ou,mix de salate,legume)</string>
    <string name="muschi_file_julien_branza_gouda_si_mamaliga">(muschi file julien,branza gouda si mamaliga)</string>
    <string name="supa_mediteraneana_cu_fructe_de_mare_400g_18lei">Supa mediteraneana cu fructe de mare 400g 18lei</string>
    <string name="pui_asiatic_dressing_iaurt_mix_de_salate">(pui asiatic,dressing iaurt,mix de salate)</string>
    <string name="pulpa_de_pui_legume_sos_thai">(pulpa de pui,legume,sos thai)</string>
    <string name="pulpa_de_rata_la_cuptor_pe_pat_de_piure_de_cartofi_dulci_si_sparanghel">(pulpa de rata la cuptor pe pat de piure de cartofi dulci si sparanghel)</string>
    <string name="antricot_argentina_350_400g_70lei">Antricot Argentina 350-400g 70lei</string>
    <string name="aripioare_de_pui_300g_24_lei">Aripioare de pui 300g 24 lei</string>
    <string name="berbecut">BERBECUT</string>
    <string name="burger">BURGER</string>
    <string name="beef_sparanghel_300g_56lei">Beef sparanghel 300g 56lei</string>
    <string name="big_stake_500g_29lei">Big Stake 500g 29lei</string>
    <string name="cartofi_gratinati_180g_7lei">Cartofi gratinati 180g 7lei</string>
    <string name="cartofi_la_cuptor_cu_rozmarin_180g_9lei">Cartofi la cuptor cu rozmarin 180g 9lei</string>
    <string name="cheesecake_cu_fructe_de_padure_160g_12lei">Cheesecake cu fructe de padure 160g 12lei</string>
    <string name="chicken_burger_23lei">Chicken Burger 23lei</string>
    <string name="ciorba_de_vitel_de_lapte_400g_9lei">Ciorba de vitel de lapte 400g 9lei</string>
    <string name="cotletul_macelarului_350g_26lei">Cotletul macelarului 350g 26lei</string>
    <string name="desert">DESERT</string>
    <string name="delmonico_steak_350_35lei">Delmonico Steak 350 35lei</string>
    <string name="frigarui_de_pui_yang_300g_22lei">Frigarui de pui yang 300g 22lei</string>
    <string name="garnituri">GARNITURI</string>
    <string name="gama_burger_23lei">Gama Burger 23lei</string>
    <string name="inele_de_ceapa_tempura_180g_9lei">Inele de ceapa Tempura 180g 9lei</string>
    <string name="inghetata_asortata_150g_12lei">Inghetata asortata 150g 12lei</string>
    <string name="lamb_greek_burger_23lei">Lamb Greek Burger 23lei</string>
    <string name="legume_la_gratar_180g_9lei">Legume la gratar 180g 9lei</string>
    <string name="meniu_steakmania">MENIU STEAKMANIA</string>
    <string name="muschi_de_vita_la_gratar_cu_sos_la_alegere_250g_44lei">Muschi de vita la gratar cu sos la alegere 250g 44lei</string>
    <string name="frigarui_black_angus_250g_36lei">fRIGARUI bLACK aNGUS 250G 36LEI</string>
    <string name="muschiulet_de_berbecut_250g_38lei">Muschiulet de berbecut 250g 38lei</string>
    <string name="pasare">PASARE</string>
    <string name="paste">PASTE</string>
    <string name="porc">PORC</string>
    <string name="paste_al_forno_350g_21lei">Paste al forno 350g 21lei</string>
    <string name="paste_carbonara_350g_24lei">Paste carbonara 350g 24lei</string>
    <string name="paste_cu_muschi_de_vita_350g_26lei">Paste cu muschi de vita 350g 26lei</string>
    <string name="paste_siciliene_350g_22lei">Paste siciliene 350g 22lei</string>
    <string name="porchetta_400g_28lei">Porchetta 400g 28lei</string>
    <string name="pork_ribs_500g_33lei">Pork Ribs 500g 33lei</string>
    <string name="pulpa_de_rata_confiata_350g_29lei">Pulpa de rata confiata 350g 29lei</string>
    <string name="rack_berbecut_350g_33lei">Rack berbecut 350g 33lei</string>
    <string name="salate_aperitiv">SALATE APERITIV</string>
    <string name="supe_creme">SUPE/CREME</string>
    <string name="salata_caesar_350g_19lei">Salata Caesar 350g 19lei</string>
    <string name="salata_gama_350g_23_lei">Salata Gama 350g 23 lei</string>
    <string name="salata_asortata_180g_9lei">Salata asortata 180g 9lei</string>
    <string name="sufleu_de_ciocolata_cu_inghetata_200g_16lei">Sufleu de ciocolata cu inghetata 200g 16lei</string>
    <string name="supa_crema_zilei_400g_9lei">Supa/Crema zilei 400g 9lei</string>
    <string name="t_bone_de_porc_350g_26lei">T-bone de porc 350g 26lei</string>
    <string name="tarta_cu_mere_160g_14lei">Tarta cu mere 160g 14lei</string>
    <string name="tigaie_de_berbecut_400g_29_lei">Tigaie de berbecut 400g 29 lei</string>
    <string name="tortul_casei_160g_11lei">Tortul casei 160g 11lei</string>
    <string name="turnedo_250g_26lei">Turnedo 250g 26lei</string>
    <string name="vita">VITA</string>
    <string name="contacteaza_ne_adresa_aleea_rotunda_10_sector_4_bucuresti_telefon_0760281042_email_contact_steakmania_ro">Contacteaza-ne ! Adresa : Aleea Rotunda 10, sector 4 , Bucuresti Telefon : 0760281042 Email:contact@steakmania.ro</string>
    <string name="program_luni_14_00_23_00_marti_joi_12_00_23_00_vineri_duminica_12_00_23_00">Program : Luni : 14:00-23:00 Marti – Joi : 12:00 – 23:00 Vineri-Duminica : 12:00-23:00</string>
    <string name="restaurantul_steakmania_este_situat_in_bucuresti_recent_construit_ofera_un_spatiu_primitor_si_incapator_de_o_capacitate_de_50_de_locuri_ce_permit_organizarea_de_mese_festive_petreceri_intalniri_de_afaceri_dar_in_special_petrecerea_timpului_cu_familia_sau_cu_prietenii_intr_o_atmosfera_calduroasa_pentru_a_capata_savoare_si_intensitate_fiecare_preparat_are_la_baza_trei_aspecte_ingredientele_atent_selectionate_indemanarea_bucatarului_si_o_prezentare_originala_restaurantul_nostru_ramane_in_esenta_o_promisiune_familiala_dar_si_un_prilej_de_incantare_a_simturilor_culinare_va_asteptam_pentru_a_savura_preparatele_noastre_iar_surprizele_nu_vor_intarzia_sa_apara">Restaurantul SteakMania este situat in Bucuresti; recent construit ofera un spatiu primitor si incapator, de o capacitate de 50 de locuri ce permit organizarea de mese festive, petreceri, intalniri de afaceri, dar in special petrecerea timpului cu familia sau cu prietenii intr-o atmosfera calduroasa. Pentru a capata savoare si intensitate, fiecare preparat are la baza trei aspecte : ingredientele atent selectionate, indemanarea bucatarului si o prezentare originala.Restaurantul nostru ramane, in esenta, o promisiune familiala, dar si un prilej de incantare a simturilor culinare. Va asteptam pentru a savura preparatele noastre, iar surprizele nu vor intarzia sa apara.</string>
    <string name="big_steak">Big Steak</string>
    <string name="burgers">Burgers</string>
    <string name="cheesecake_cu_fructe_de_padure">Cheesecake cu fructe de padure</string>
    <string name="delmonico_steak">Delmonico Steak</string>
    <string name="porc_ribs">Porc Ribs</string>
    <string name="rack_berbecut">Rack Berbecut</string>
    <string name="supa_mediteraneana_cu_fructe_de_mare">Supa mediteraneana cu fructe de mare</string>
    <string name="coasta_de_porc_la_gratar_cu_piper_mozaic">(coasta de porc la gratar cu piper mozaic)</string>
    <string name="ceafa_de_porc_marinata_la_gratar">(ceafa de porc marinata la gratar)</string>
    <string name="duet_de_muschi_la_gratar">(duet de muschi la gratar)</string>
    <string name="mix_de_muschi_file_si_piept_de_porc_cu_rozmarin">(mix de muschi file si piept de porc cu rozmarin)</string>
    <string name="muschiulet_de_porc_la_gratar_cu_sos_de_trio_ciuperci">(muschiulet de porc la gratar cu sos de trio ciuperci)</string>
    <string name="piept_de_porc_marinat_cu_sos_de_ierburi_aromate">(piept de porc marinat cu sos de ierburi aromate)</string>
    <string name="miel_crema_de_iaurt_cu_menta_mix_de_salate_castraveti_ceapa">(miel,crema de iaurt cu menta,mix de salate,castraveti,ceapa)</string>
    <string name="piept_de_pui_crema_de_iaurt_mix_de_salate_castraveti_murati_ceapa">(piept de pui,crema de iaurt,mix de salate,castraveti murati,ceapa)</string>
    <string name="vitel_sos_gama_mix_de_salate_castraveti_rosii_ceapa_branza_cheddar_bacon">(vitel,sos gama,mix de salate,castraveti,rosii,ceapa,branza cheddar,bacon)</string>
    <string name="muschi_de_vita_usturoi_ardei_iute_parmezan">(muschi de vita,usturoi,ardei iute,parmezan)</string>
    <string name="panna_bacon_de_casa_gorgonzola_parmezan">(panna,bacon de casa,gorgonzola,parmezan)</string>
    <string name="sos_roze_legume_primavera_piept_de_pui_mozzarella">(sos roze,legume primavera,piept de pui,mozzarella)</string>
    <string name="sos_roze_vinete_bacon_de_casa_branza_cheddar">(sos roze,vinete,bacon de casa,branza cheddar)</string>
    <string name="feedback">Feedback</string>
    <string name="finalizare_comanda">Finalizare Comanda</string>
    <string name="stakemania_va_ureaza_pofta_buna">STAKEMANIA VA UREAZA POFTA BUNA!</string>
    <string name="rezerva">Rezerva</string>
    <string name="rezervari_stakemania">REZERVARI STAKEMANIA</string>
</resources>