<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Steakmania"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pc.myapplication.MainActivity"
    android:background="@drawable/poza"
    android:transitionGroup="true"
    android:layout_alignStart="@+id/button"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/steakmania"
        android:ems="6"
        android:id="@+id/editText3"
        android:background="?android:attr/colorActivatedHighlight"
        android:textColor="@android:color/black"
        android:textColorHighlight="?attr/colorControlNormal"
        android:textIsSelectable="true"
        android:textAlignment="center"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        tools:ignore="LabelFor" />

    <Button
        android:text="@string/rezervari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/galerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_above="@+id/button5"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="38dp" />

    <Button
        android:text="@string/oferte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_marginBottom="26dp"
        android:layout_above="@+id/button4"
        android:layout_alignStart="@+id/button" />

    <Button
        android:text="@string/descriere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_marginBottom="40dp"
        android:layout_above="@+id/button2"
        android:layout_alignEnd="@+id/button5" />

    <Button
        android:text="@string/meniu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_marginBottom="37dp"
        android:layout_above="@+id/button3"
        android:layout_alignParentStart="true" />

</RelativeLayout>
